feat: add section main

--- a/index.html
+++ b/index.html
@@ -10,8 +10,41 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header"></header>
-      <main class="page"></main>
+      <header class="header">
+        <div class="header__logo">
+          <img src="img/header/logo.svg" alt="DEEP" />
+        </div>
+        <div class="header__social social-header">
+          <a href="#" class="social-header__item">
+            <img src="img/header/social/fb.svg" alt="facebook" />
+          </a>
+          <a href="#" class="social-header__item">
+            <img src="img/header/social/tw.svg" alt="twitter" />
+          </a>
+          <a href="#" class="social-header__item">
+            <img src="img/header/social/ins.svg" alt="instagram" />
+          </a>
+        </div>
+      </header>
+      <main class="page">
+        <section class="page__section main">
+          <div class="main__container">
+            <div class="main__body">
+              <div class="main__header header-block">
+                <div class="header-block__label">We’re Creative</div>
+                <h1 class="header-block__title">Digital Agency</h1>
+              </div>
+              <div class="main__text text">
+                <p>We pride ourselves in delivering world class outputs to all our customers.</p>
+              </div>
+              <a href="#" class="main__button button">Get Started</a>
+            </div>
+            <div class="main__image">
+              <img class="main__picture" src="img/main/bike.jpg" alt="bike" />
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="footer"></footer>
     </div>
     <script src="js/script.js"></script>
