--- a/index.html
+++ b/index.html
@@ -44,6 +44,30 @@
             </div>
           </div>
         </section>
+        <section class="page__section about">
+          <div class="about__container">
+            <div class="about__body">
+              <div class="about__header header-block">
+                <div class="header-block__label">Who we are</div>
+                <h2 class="header-block__title">About Agency</h2>
+              </div>
+              <div class="about__text text">
+                <p>
+                  Our company philosophy is to create the kind of website that most business want: easy to find, stylish and applealing,
+                  quick loading, mobile responsive and easy to buy from.
+                </p>
+                <p>
+                  Trained as industrial designers, we’ve a deep rooted belief in rational function and sustainable aesthetics. Our
+                  methodical approach is focused on revealing the essence of each design challenge to allow us to create holistic and
+                  durable solutions.
+                </p>
+              </div>
+            </div>
+            <div class="about__image">
+              <img src="img/about/woman-say.jpg" alt="woman-say" />
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
