--- a/index.html
+++ b/index.html
@@ -68,6 +68,56 @@
             </div>
           </div>
         </section>
+        <section class="page__section services">
+          <div class="services__container">
+            <div class="services__body">
+              <div class="services__header header-block">
+                <div class="header-block__label">What we do</div>
+                <h2 class="header-block__title">Our Services</h2>
+              </div>
+              <div class="services__items">
+                <article class="services__item item-services">
+                  <div class="item-services__icon">
+                    <img src="img/services/volume.svg" alt="volume" />
+                  </div>
+                  <h4 class="item-services__title">Online Marketing</h4>
+                  <div class="item-services__text">The internet has transformed business marketing. It is the heart of our company.</div>
+                </article>
+                <article class="services__item item-services">
+                  <div class="item-services__icon">
+                    <img src="img/services/layout.svg" alt="layout" />
+                  </div>
+                  <h4 class="item-services__title">Web Development</h4>
+                  <div class="item-services__text">Web development is the work involved in developing a Web site for the Internet.</div>
+                </article>
+                <article class="services__item item-services">
+                  <div class="item-services__icon">
+                    <img src="img/services/heart.svg" alt="volume" />
+                  </div>
+                  <h4 class="item-services__title">Website Design</h4>
+                  <div class="item-services__text">Web design refers to the design of websites that are displayed on the internet.</div>
+                </article>
+                <article class="services__item item-services">
+                  <div class="item-services__icon">
+                    <img src="img/services/search.svg" alt="search" />
+                  </div>
+                  <h4 class="item-services__title">SEO Optimization</h4>
+                  <div class="item-services__text">
+                    SEO is the process of improving the quality and quantity of website traffic to a website.
+                  </div>
+                </article>
+              </div>
+            </div>
+            <div class="services__media">
+              <div class="services__image">
+                <img src="img/services/man.jpg" alt="man" />
+              </div>
+              <div class="services__phone">
+                <img src="img/services/phone.png" alt="phone" />
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
