feat: add section portfolio and team

--- a/index.html
+++ b/index.html
@@ -118,6 +118,126 @@
             </div>
           </div>
         </section>
+        <section class="page__section portfolio">
+          <div class="portfolio__container">
+            <div class="portfolio__header header-block header-block_center">
+              <div class="header-block__label">Our works</div>
+              <h2 class="header-block__title">Portfolio</h2>
+            </div>
+            <div class="portfolio__items">
+              <a href="#" class="portfolio__item">
+                <img src="img/portfolio/laptop.jpg" alt="laptop" />
+              </a>
+              <a href="#" class="portfolio__item">
+                <img src="img/portfolio/lemon.jpg" alt="lemon" />
+              </a>
+              <a href="#" class="portfolio__item">
+                <img src="img/portfolio/sheet.jpg" alt="sheet" />
+              </a>
+              <a href="#" class="portfolio__item">
+                <img src="img/portfolio/photo.jpg" alt="photo" />
+              </a>
+            </div>
+          </div>
+        </section>
+        <section class="page__section team">
+          <div class="team__container">
+            <div class="team__header header-block header-block_center">
+              <div class="header-block__label">Meet the staff</div>
+              <h2 class="header-block__title">Our Team</h2>
+            </div>
+            <div class="team__items">
+              <div class="team__item item-team">
+                <div class="item-team__image">
+                  <img src="img/team/01.jpg" alt="team" />
+                </div>
+                <div class="item-team__info">
+                  <div class="item-team__body">
+                    <div class="item-team__title">Antonita Prasentina</div>
+                    <div class="item-team__position">Content Writer</div>
+                  </div>
+                  <div class="item-team__social social-item">
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/fb.svg" alt="facebook" />
+                    </a>
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/tw.svg" alt="twitter" />
+                    </a>
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/ins.svg" alt="instagram" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__item item-team">
+                <div class="item-team__image">
+                  <img src="img/team/02.jpg" alt="team" />
+                </div>
+                <div class="item-team__info">
+                  <div class="item-team__body">
+                    <div class="item-team__title">Choudri Malhotra</div>
+                    <div class="item-team__position">UI Designer</div>
+                  </div>
+                  <div class="item-team__social social-item">
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/fb.svg" alt="facebook" />
+                    </a>
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/tw.svg" alt="twitter" />
+                    </a>
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/ins.svg" alt="instagram" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__item item-team">
+                <div class="item-team__image">
+                  <img src="img/team/03.jpg" alt="team" />
+                </div>
+                <div class="item-team__info">
+                  <div class="item-team__body">
+                    <div class="item-team__title">Malavika Hegte</div>
+                    <div class="item-team__position">Digital Marketer</div>
+                  </div>
+                  <div class="item-team__social social-item">
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/fb.svg" alt="facebook" />
+                    </a>
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/tw.svg" alt="twitter" />
+                    </a>
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/ins.svg" alt="instagram" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__item item-team">
+                <div class="item-team__image">
+                  <img src="img/team/04.jpg" alt="team" />
+                </div>
+                <div class="item-team__info">
+                  <div class="item-team__body">
+                    <div class="item-team__title">Anirudh Vedha</div>
+                    <div class="item-team__position">Lead Developer</div>
+                  </div>
+                  <div class="item-team__social social-item">
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/fb.svg" alt="facebook" />
+                    </a>
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/tw.svg" alt="twitter" />
+                    </a>
+                    <a href="#" class="social-item__item">
+                      <img src="img/header/social/ins.svg" alt="instagram" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
